fixed overflow

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -207,7 +207,6 @@ header {
                     top: -10px;
                     position: absolute;
                     height: 30px;
-                    overflow: none;
                     select {
                         width: 100%;
                         height: 40px;
@@ -267,7 +266,8 @@ header {
                     top: 0px;
                     display: block;
                     position: relative;
-                    height: auto;
+                    height: 300px;
+                    overflow-y: scroll;
                 }
             }
         }
@@ -459,7 +459,7 @@ main{
                             top: 100%;
                             position: absolute;
                             height: auto;
-
+                            overflow: hidden;
                             button {
                                 border-radius: 10px;
                                 margin: 5px 0;
